--- a/webapp/index.html
+++ b/webapp/index.html
@@ -48,6 +48,7 @@
 		<ul> 
 			<li>login</li>
 			<li><a href="index.php/company">all companys</a></li>
+			<li><a href="index.php/company/create">add company</a></li>
 			<li>profile</li>
 			<li>search</li>
 		</ul>
